Generate thumbnails for slides